# Leetcode

./: README.md  client.py  custom comparator function  custom comparator function.c++  draw a 5 horned star  fin.epop  overriding and overloading, as well encapsulation  reverse triangle pyramid  server.py  snake_index.html  stackmath.epop(task-A)  stackmath.epop(task-B)
algorithm-backtracking-implementation-pro/: .gitignore  CMakeLists.txt  README.md
algorithm-backtracking-implementation-pro/benchmarks/: benchmark_main.cpp
algorithm-backtracking-implementation-pro/docs/: backtracking_explanation.md  edge_cases_gotchas.md  interview_tips.md  visual_diagrams.md
algorithm-backtracking-implementation-pro/src/: backtracking_solver.hpp  n_queens.cpp  optimized_solutions.cpp  permutations.cpp  subsets.cpp  sudoku_solver.cpp  utils.cpp  utils.hpp
algorithm-backtracking-implementation-pro/tests/: test_main.cpp
algorithm-tree-traversal-implementation-enhanced/: ALGORITHMS.md  CMakeLists.txt  NOTES.md  README.md
algorithm-tree-traversal-implementation-enhanced/benchmarks/: benchmark.cpp
algorithm-tree-traversal-implementation-enhanced/problems/: problem_solutions.cpp  problem_solutions.hpp
algorithm-tree-traversal-implementation-enhanced/src/: main.cpp  tree_traversals.cpp  tree_traversals.hpp  tree_utils.cpp  tree_utils.hpp
algorithm-tree-traversal-implementation-enhanced/tests/: test_suite.cpp
coding-interview-backtracking-complete/: CMakeLists.txt  END FILE  README.md
coding-interview-backtracking-complete/benchmarking/: benchmark_main.cpp
coding-interview-backtracking-complete/docs/: Backtracking_Explanation.md  Edge_Cases_Gotchas.md  Interview_Tips_Variations.md  Visual_Diagrams.md
coding-interview-backtracking-complete/src/: CombinationSumIII.hpp  NQueens.hpp  PermutationsII.hpp  SubsetsII.hpp  WordSearch.hpp
coding-interview-backtracking-complete/tests/: test_main.cpp
coding-interview-backtracking-complete/utils/: helpers.hpp
data-structures-array-processing-pro/: CMakeLists.txt  README.md  file_1778218257396.txt  file_1778218257397.txt  test.js
data-structures-array-processing-pro/benchmarks/: benchmark.cpp
data-structures-array-processing-pro/docs/: algorithms.md  diagrams.md  interview_guide.md
data-structures-array-processing-pro/src/: array_manipulation.cpp  array_manipulation.hpp  utils.hpp
data-structures-array-processing-pro/tests/: test_array_manipulation.cpp
data-structures-bit-manipulation-pro/: CMakeLists.txt  README.md
data-structures-bit-manipulation-pro/additional_implementations/: AdditionalBitManipulationSolutions.hpp  CountSetBits_Approaches.cpp  ReverseBits_Approaches.cpp
data-structures-bit-manipulation-pro/benchmarking/: benchmark.cpp
data-structures-bit-manipulation-pro/docs/: algorithms.md  interview_tips.md  visualizations.md
data-structures-bit-manipulation-pro/include/: BitManipulationSolutions.hpp  bit_manipulation_utils.hpp
data-structures-bit-manipulation-pro/src/: BitManipulationSolutions.cpp
data-structures-bit-manipulation-pro/tests/: test_bit_manipulation.cpp
data-structures-hash-tables-plus/hash_table_interview_project/: .gitignore  CMakeLists.txt
data-structures-sorting-algorithms-advanced/: CMakeLists.txt  README.md
data-structures-sorting-algorithms-advanced/benchmark/: benchmark.cpp
data-structures-sorting-algorithms-advanced/docs/: ALGORITHM_EXPLANATIONS.md  INTERVIEW_TIPS.md  README.md  diagrams.txt
data-structures-sorting-algorithms-advanced/src/: helpers.h  main_algorithms.cpp  sort_implementations.cpp  sort_implementations.h
data-structures-sorting-algorithms-advanced/tests/: test_main_algorithms.cpp  test_sort_implementations.cpp
data-structures-stack-queue-enhanced/StackQueueProject/: .gitignore  CMakeLists.txt
leetcode-array-processing-solutions-optimized/: .gitignore  CMakeLists.txt  README.md  build.sh
leetcode-array-processing-solutions-optimized/benchmarks/: benchmark_main.cpp
leetcode-array-processing-solutions-optimized/docs/: README.md  algorithm_explanation.md  algorithms.md  diagrams.md  interview_tips.md
leetcode-array-processing-solutions-optimized/src/: benchmark.cpp  brute_force_solutions.cpp  main.cpp  main_algorithms.cpp  utils.cpp  utils.h
leetcode-array-processing-solutions-optimized/tests/: Catch2_setup.cpp  test_algorithms.cpp  test_main.cpp
leetcode-array-processing-solutions-optimized/utils/: array_utils.cpp
leetcode-binary-search-solutions-plus/: .gitignore  CMakeLists.txt  README.md
leetcode-binary-search-solutions-plus/benchmarks/: CMakeLists.txt  benchmark_algorithms.cpp
leetcode-binary-search-solutions-plus/docs/: README.md  binary_search_explained.md  diagrams.md  problems_description.md
leetcode-binary-search-solutions-plus/src/: algorithms.cpp  algorithms.h  helpers.cpp  helpers.h
leetcode-binary-search-solutions-plus/tests/: CMakeLists.txt  test_algorithms.cpp
leetcode-binary-search-solutions-pro/: .gitignore  CMakeLists.txt  README.md
leetcode-binary-search-solutions-pro/docs/: README.md
leetcode-binary-search-solutions-pro/src/: main_algorithms.cpp  main_algorithms.h  utils.cpp  utils.h
leetcode-binary-search-solutions-pro/tests/: simple_test_framework.h  test_main_algorithms.cpp
leetcode-dynamic-programming-solutions-pro/: .gitignore  CMakeLists.txt  END FILE  README.md
leetcode-dynamic-programming-solutions-pro/benchmarking/: benchmark.cpp
leetcode-dynamic-programming-solutions-pro/docs/: ALGORITHM_EXPLANATION.md  INTERVIEW_TIPS.md  README.md  visual_diagrams.txt
leetcode-dynamic-programming-solutions-pro/src/: brute_force_solutions.cpp  helpers.hpp  main_dp_problems.cpp  optimized_space.cpp
leetcode-dynamic-programming-solutions-pro/tests/: test_data.hpp  test_dp_problems.cpp
leetcode-string-processing-solutions-advanced/: .gitignore  CMakeLists.txt  README.md  pom.xml
optimization-graph-algorithms-problems-advanced/: CMakeLists.txt  END FILE  README.md
optimization-mathematical-algorithms-problems-optimized/: .gitignore  CMakeLists.txt  README.md  file_1772664024413.txt  test.js
(+2406 files in other folders)
